--- a/Price Comparison/appsettings.json
+++ b/Price Comparison/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DeafultConnection": "Data Source=.;Initial Catalog=WriteDBheree;Integrated Security=True;TrustServerCertificate=True"
+    "DeafultConnection": "Data Source=.;Initial Catalog=ProdCompDatabase;Integrated Security=True;TrustServerCertificate=True;Trusted_Connection=True;Connection Timeout=30;"
   }
 }
