--- a/PriceComparing/DataAccess/efpt.config.json
+++ b/PriceComparing/DataAccess/efpt.config.json
@@ -15,6 +15,10 @@
    "T4TemplatePath": null,
    "Tables": [
       {
+         "Name": "[dbo].[Brands]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[Category]",
          "ObjectType": 0
       },
