--- a/PriceComparing/PriceComparing/appsettings.json
+++ b/PriceComparing/PriceComparing/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DeafultConnection": "Data Source=.;Initial Catalog=ProdCompDatabase;Integrated Security=True;TrustServerCertificate=True;Trusted_Connection=True;Connection Timeout=30;"
+    "DefaultConnection": "Data Source=.;Initial Catalog=ProdCompDatabase;Integrated Security=True;TrustServerCertificate=True;Trusted_Connection=True;Connection Timeout=30;"
   }
 }
