--- a/PriceComparing/PriceComparing/appsettings.json
+++ b/PriceComparing/PriceComparing/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DeafultConnection": "Data Source=.;Initial Catalog=ProdCompDatabase;Integrated Security=True;TrustServerCertificate=True;Trusted_Connection=True;Connection Timeout=30;"
-  }
+  },
+  "ScrapingService": "http://127.0.0.1:8000"
 }
