--- a/PriceComparing/DataAccess/efpt.config.json
+++ b/PriceComparing/DataAccess/efpt.config.json
@@ -3,7 +3,7 @@
    "ContextClassName": "ProdCompDatabaseContext",
    "ContextNamespace": null,
    "FilterSchemas": false,
-   "IncludeConnectionString": true,
+   "IncludeConnectionString": false,
    "ModelNamespace": null,
    "OutputContextPath": null,
    "OutputPath": "Models",
@@ -77,6 +77,7 @@
    ],
    "UiHint": null,
    "UncountableWords": null,
+   "UseAsyncStoredProcedureCalls": true,
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": true,
    "UseDateOnlyTimeOnly": true,
