--- a/PriceComparing/PriceComparing/appsettings.json
+++ b/PriceComparing/PriceComparing/appsettings.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=ProdCompDatabase;Integrated Security=True;TrustServerCertificate=True;Trusted_Connection=True;Connection Timeout=30;"
   },
+  "JWT": {
+    "Key": "bdjOILjT8Bv2g+LYoaSTFM1qA5zqEW5PxxNyANavJ2U=",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "DurationInDays": 30
+  },
   "ScrapingService": "http://127.0.0.1:8000"
 }
