--- a/PriceComparing/PriceComparing/appsettings.json
+++ b/PriceComparing/PriceComparing/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=ProdCompDatabase;Integrated Security=True;TrustServerCertificate=True;Trusted_Connection=True;Connection Timeout=30;"
+    "DefaultConnection": "Data Source=.;Initial Catalog=ProdCompDatabase;Integrated Security=True;TrustServerCertificate=True;Trusted_Connection=True;"
   },
   "JWT": {
     "Key": "bdjOILjT8Bv2g+LYoaSTFM1qA5zqEW5PxxNyANavJ2U=",
