updated Scraping Service and Controllers

--- a/PriceComparing/PriceComparing/appsettings.json
+++ b/PriceComparing/PriceComparing/appsettings.json
@@ -15,5 +15,5 @@
     "Audience": "SecureApiUser",
     "DurationInDays": 30
   },
-  "ScrapingService": "http://127.0.0.1:8000"
+  "ScrapingService": "https://price-comparison-scraper.onrender.com"
 }
