push new connection string

--- a/PriceComparing/PriceComparing/appsettings.json
+++ b/PriceComparing/PriceComparing/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=ProdCompDatabase;Integrated Security=True;TrustServerCertificate=True;Trusted_Connection=True;",
+    "DefaultConnection": "Server=tcp:pricescomparingserver.database.windows.net,1433;Initial Catalog=PriceComparingDB;Persist Security Info=False;User ID=QEMAAA;Password=z7~OnHiiGo;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "HangFire": "Server=.;Database=HangFire;Integrated Security=SSPI; TrustServerCertificate=True;"
   },
   "JWT": {
